netatalk (2.0.3-9) unstable; urgency=low

  * Update zeroconf patch (found in Gentoo bug#133575):
    + Enable zeroconf only if srvloc is not enabled.
    + Use Avahis threaded poll implementation only for Avahi >= 0.6.4,
      and fallback to handling it internally.
  * Packaging moved to collab-maint Git at Alioth. Update VCS-* hints.
  * Update local cdbs snippets:
    + Major improvements to copyright-check, including new versioned
      build-dependency on devscripts.  Update debian/copyright_hints.
    + Drop wget options broken with recent versions of wget in
      update-tarball.mk.
    + Update debian/README.cdbs-tweaks.
  * Semi-auto-update debian/control to apply changes contained in the above:
    DEB_AUTO_UPDATE_DEBIAN_CONTROL=yes fakeroot debian/rules clean

 -- Jonas Smedegaard <dr@jones.dk>  Fri, 04 Apr 2008 23:08:59 +0200

netatalk (2.0.3-8) unstable; urgency=medium

  * Add patch 001 to sync with upstream CVS as of today.
  * Add rule to generate CVS snapshot patch.
  * Reduce patch 110 and unfuzz other patches to adapt to CVS snapshot.
  * Add patch 111 extending autotools macro resolving BerkeleyDB libs to
    check newest versions first, and check versions 4.5 and 4.6 too.
  * Explicitly disable SLP support and build-conflict against libavahi-
    compat-libdnssd-dev to not clash with AVAHI-based Zeroconf support.
    Closes: bug#459395, thanks to Gregory Oschwald.
  * Add patch 112 to fix assertion in zeroconf patch. Closes:
    bug#457246, thanks to Omar Siam.
  * Set urgency=medium as lack of the above zeroconf fix silently broke
    netatalk completely in some situations.
  * Update cdbs tweaks:
    + Support zip in upstream-tarball.mk
    + Use ~ as repackaging delimiter in upstream-tarball.mk to make room
      for point releases and cleaned up rerelease
    + Rename top srcdir in repackaged tarball to $pkg-$ver.orig to
      comply with Developers Reference 6.7.8.2.
    + Support mangling upstream version string in upstream-tarball.mk