@@ -4,6 +4,8 @@ netatalk (2.0.3-9) unstable; urgency=low
     + Enable zeroconf only if srvloc is not enabled.
     + Use Avahis threaded poll implementation only for Avahi >= 0.6.4,
       and fallback to handling it internally.
+  * Disable zeroconf support (enable by rebuilding with
+    DEB_BUILD_OPTIONS=zeroconf).  Closes: bug#462082, #463544.
   * Packaging moved to collab-maint Git at Alioth. Update VCS-* hints.
   * Update local cdbs snippets:
     + Major improvements to copyright-check, including new versioned
